The blog page is not responsive (https://github.com/FrontEnd-ro/frontend.ro/issues/382)

--- a/client/components/blog/Blog.module.scss
+++ b/client/components/blog/Blog.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import './BlogArticlePreview/BlogArticlePreview.module.scss';
 
 .blog {
   padding-top: 1em;
@@ -12,4 +13,10 @@
 .subscribe-form {
   margin-top: 12em;
   margin-bottom: 2em;
+}
+
+@media screen and (max-width: 650px) {
+  .article-preview {
+    @include BlogArticlePreview-column;
+  }
 }
